Tried again to add Lombok (f... this); added classes for fuel per lap, lap time and race time; tried to save data between view states with ViewModel

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
+    id 'io.franzbecker.gradle-lombok' version '5.0.0'
+    //id 'java'
+}
 
+repositories {
 }
 
 dependencies {
